fix white space between sections

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ body,html,main {
     padding-right:10%;
     min-height: 75%;
     font-family: arial;
+    margin-bottom: -22px;
+    
 }
 
 
